antlr/HydraQLParser.java
// Generated from ./HydraQLParser.g4 by ANTLR 4.5.1

package com.hydraql.dsl.antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HydraQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AND=1, ARRAY=2, AS=3, BETWEEN=4, BINARY=5, CHAR=6, CREATE=7, DATE=8, DECIMAL=9, 
		DEFAULT=10, DELETE=11, DISABLE=12, DISTINCT=13, DOUBLE=14, DROP=15, EXISTS=16, 
		FALSE=17, FLOAT=18, FROM=19, IN=20, INTEGER=21, INTO=22, IS=23, KEY=24, 
		LIKE=25, VERSIONS=26, STARTTS=27, ENDTS=28, TS=29, LIMIT=30, NOT=31, NULL_=32, 
		OR=33, PRIMARY=34, SELECT=35, SMALLINT=36, VIRTUAL=37, TABLE=38, TABLES=39, 
		TIME=40, TIMESTAMP=41, TINYINT=42, TRUE=43, UNSIGNED_DATE=44, UNSIGNED_DOUBLE=45, 
		UNSIGNED_FLOAT=46, UNSIGNED_INT=47, UNSIGNED_LONG=48, UNSIGNED_SMALLINT=49, 
		UNSIGNED_TIME=50, UNSIGNED_TIMESTAMP=51, UNSIGNED_TINYINT=52, UPDATE=53, 
		UPSERT=54, VALUES=55, VARBINARY=56, VARCHAR=57, WHERE=58, WITH=59, PROPERTIES=60, 
		SEMI=61, COLON=62, COMMA=63, DOT=64, LP=65, RP=66, VAR_LP=67, VAR_RP=68, 
		STAR=69, DIV=70, MOD=71, PLUS=72, MINUS=73, PIPEPIPE=74, LSB=75, RSC=76, 
		EQ=77, NE=78, NE2=79, GT=80, GE=81, LT=82, LE=83, QM=84, WHITE_SPACE=85, 
		SQL_COMMENT=86, LINE_COMMENT=87, HINT_START=88, HINT_END=89, DOUBLE_QUOTE_ID=90, 
		SINGLE_QUOTE=91, ID=92, STRING_LITERAL=93, DECIMAL_LITERAL=94, FLOAT_LITERAL=95, 
		REAL_LITERAL=96, CHAR_LITERAL=97, SHOW=98, IF=99, BIGINT=100;
	public static final int
		RULE_root = 0, RULE_batch = 1, RULE_sql_command = 2, RULE_ddl_command = 3, 
		RULE_dml_command = 4, RULE_create_virtual_table_command = 5, RULE_table_options = 6, 
		RULE_options_ = 7, RULE_option = 8, RULE_drop_table_command = 9, RULE_show_tables_command = 10, 
		RULE_show_table_command = 11, RULE_if_exists = 12, RULE_if_not_exists = 13, 
		RULE_table_ref = 14, RULE_upsert_values_command = 15, RULE_insert_values = 16, 
		RULE_column_ref_list = 17, RULE_column_def_list = 18, RULE_delete_command = 19, 
		RULE_timestamp_range_clause = 20, RULE_tsExp = 21, RULE_timestamp = 22, 
		RULE_gtOper = 23, RULE_leOper = 24, RULE_versions_clause = 25, RULE_limit_clause = 26, 
		RULE_where_clause = 27, RULE_select_command = 28, RULE_select_statement = 29, 
		RULE_number = 30, RULE_select_expression = 31, RULE_functionCall = 32, 
		RULE_funcName = 33, RULE_functionArgs = 34, RULE_fullColumnName = 35, 
		RULE_family_name = 36, RULE_quoted_name = 37, RULE_column_alias = 38, 
		RULE_alias = 39, RULE_name = 40, RULE_namespace_name = 41, RULE_table_name = 42, 
		RULE_column_def = 43, RULE_column_ref = 44, RULE_column_name = 45, RULE_data_type = 46, 
		RULE_expression = 47, RULE_comp_op = 48, RULE_expression_list = 49, RULE_variable = 50, 
		RULE_literal = 51, RULE_string = 52, RULE_varString = 53, RULE_numeric = 54, 
		RULE_integer = 55, RULE_decimal = 56, RULE_true_false = 57, RULE_dimension_int = 58, 
		RULE_precision_int = 59, RULE_scale_int = 60, RULE_sql_data_type = 61, 
		RULE_hbase_data_type = 62;
	public static final String[] ruleNames = {
		"root", "batch", "sql_command", "ddl_command", "dml_command", "create_virtual_table_command", 
		"table_options", "options_", "option", "drop_table_command", "show_tables_command", 
		"show_table_command", "if_exists", "if_not_exists", "table_ref", "upsert_values_command", 
		"insert_values", "column_ref_list", "column_def_list", "delete_command", 
		"timestamp_range_clause", "tsExp", "timestamp", "gtOper", "leOper", "versions_clause", 
		"limit_clause", "where_clause", "select_command", "select_statement", 
		"number", "select_expression", "functionCall", "funcName", "functionArgs", 
		"fullColumnName", "family_name", "quoted_name", "column_alias", "alias", 
		"name", "namespace_name", "table_name", "column_def", "column_ref", "column_name", 
		"data_type", "expression", "comp_op", "expression_list", "variable", "literal", 
		"string", "varString", "numeric", "integer", "decimal", "true_false", 
		"dimension_int", "precision_int", "scale_int", "sql_data_type", "hbase_data_type"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'AND'", "'ARRAY'", "'AS'", "'BETWEEN'", "'BINARY'", "'CHAR'", "'CREATE'", 
		"'DATE'", "'DECIMAL'", "'DEFAULT'", "'DELETE'", "'DISABLE'", "'DISTINCT'", 
		"'DOUBLE'", "'DROP'", "'EXISTS'", "'FALSE'", "'FLOAT'", "'FROM'", "'IN'", 
		"'INTEGER'", "'INTO'", "'IS'", "'KEY'", "'LIKE'", "'VERSIONS'", "'STARTTS'", 
		"'ENDTS'", "'TS'", "'LIMIT'", "'NOT'", "'NULL'", "'OR'", "'PRIMARY'", 
		"'SELECT'", "'SMALLINT'", "'VIRTUAL'", "'TABLE'", "'TABLES'", "'TIME'", 
		"'TIMESTAMP'", "'TINYINT'", "'TRUE'", "'UNSIGNED_DATE'", "'UNSIGNED_DOUBLE'", 
		"'UNSIGNED_FLOAT'", "'UNSIGNED_INT'", "'UNSIGNED_LONG'", "'UNSIGNED_SMALLINT'", 
		"'UNSIGNED_TIME'", "'UNSIGNED_TIMESTAMP'", "'UNSIGNED_TINYINT'", "'UPDATE'", 
		"'UPSERT'", "'VALUES'", "'VARBINARY'", "'VARCHAR'", "'WHERE'", "'WITH'", 
		"'PROPERTIES'", "';'", "':'", "','", "'.'", "'('", "')'", "'${'", "'}'", 
		"'*'", "'/'", "'%'", "'+'", "'-'", "'||'", "'['", "']'", "'='", "'<>'", 
		"'!='", "'>'", "'>='", "'<'", "'<='", "'?'", null, null, null, "'/*+'", 
		"'*/'", null, "'''"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "AND", "ARRAY", "AS", "BETWEEN", "BINARY", "CHAR", "CREATE", "DATE", 
		"DECIMAL", "DEFAULT", "DELETE", "DISABLE", "DISTINCT", "DOUBLE", "DROP", 
		"EXISTS", "FALSE", "FLOAT", "FROM", "IN", "INTEGER", "INTO", "IS", "KEY", 
		"LIKE", "VERSIONS", "STARTTS", "ENDTS", "TS", "LIMIT", "NOT", "NULL_", 
		"OR", "PRIMARY", "SELECT", "SMALLINT", "VIRTUAL", "TABLE", "TABLES", "TIME", 
		"TIMESTAMP", "TINYINT", "TRUE", "UNSIGNED_DATE", "UNSIGNED_DOUBLE", "UNSIGNED_FLOAT", 
		"UNSIGNED_INT", "UNSIGNED_LONG", "UNSIGNED_SMALLINT", "UNSIGNED_TIME", 
		"UNSIGNED_TIMESTAMP", "UNSIGNED_TINYINT", "UPDATE", "UPSERT", "VALUES", 
		"VARBINARY", "VARCHAR", "WHERE", "WITH", "PROPERTIES", "SEMI", "COLON", 
		"COMMA", "DOT", "LP", "RP", "VAR_LP", "VAR_RP", "STAR", "DIV", "MOD", 
		"PLUS", "MINUS", "PIPEPIPE", "LSB", "RSC", "EQ", "NE", "NE2", "GT", "GE", 
		"LT", "LE", "QM", "WHITE_SPACE", "SQL_COMMENT", "LINE_COMMENT", "HINT_START", 
		"HINT_END", "DOUBLE_QUOTE_ID", "SINGLE_QUOTE", "ID", "STRING_LITERAL", 
		"DECIMAL_LITERAL", "FLOAT_LITERAL", "REAL_LITERAL", "CHAR_LITERAL", "SHOW", 
		"IF", "BIGINT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HydraQLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HydraQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RootContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(HydraQLParser.EOF, 0); }
		public List<BatchContext> batch() {
			return getRuleContexts(BatchContext.class);
		}
		public BatchContext batch(int i) {
			return getRuleContext(BatchContext.class,i);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HydraQLParserVisitor ) return ((HydraQLParserVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CREATE) | (1L << DELETE) | (1L << DROP) | (1L << SELECT) | (1L << UPSERT))) != 0) || _la==SHOW) {
				{
				{
				setState(126);
				batch();
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BatchContext extends ParserRuleContext {
		public Sql_commandContext sql_command() {
			return getRuleContext(Sql_commandContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(HydraQLParser.SEMI, 0); }
		public BatchContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_batch; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HydraQLParserVisitor ) return ((HydraQLParserVisitor<? extends T>)visitor).visitBatch(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BatchContext batch() throws RecognitionException {
		BatchContext _localctx = new BatchContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_batch);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			sql_command();
			setState(136);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(135);
				match(SEMI);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sql_commandContext extends ParserRuleContext {
		public Ddl_commandContext ddl_command() {
			return getRuleContext(Ddl_commandContext.class,0);
		}
		public Dml_commandContext dml_command() {
			return getRuleContext(Dml_commandContext.class,0);
		}
		public Sql_commandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sql_command; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HydraQLParserVisitor ) return ((HydraQLParserVisitor<? extends T>)visitor).visitSql_command(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Sql_commandContext sql_command() throws RecognitionException {
		Sql_commandContext _localctx = new Sql_commandContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sql_command);
		try {
			setState(140);
			switch (_input.LA(1)) {
			case CREATE:
			case DROP:
			case SHOW:
				enterOuterAlt(_localctx, 1);
				{
				setState(138);
				ddl_command();
				}
				break;
			case DELETE:
			case SELECT:
			case UPSERT:
				enterOuterAlt(_localctx, 2);
				{
				setState(139);
				dml_command();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ddl_commandContext extends ParserRuleContext {
		public Create_virtual_table_commandContext create_virtual_table_command() {
			return getRuleContext(Create_virtual_table_commandContext.class,0);
		}
		public Show_tables_commandContext show_tables_command() {
			return getRuleContext(Show_tables_commandContext.class,0);
		}
		public Show_table_commandContext show_table_command() {
			return getRuleContext(Show_table_commandContext.class,0);
		}
		public Drop_table_commandContext drop_table_command() {
			return getRuleContext(Drop_table_commandContext.class,0);
		}
		public Ddl_commandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ddl_command; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HydraQLParserVisitor ) return ((HydraQLParserVisitor<? extends T>)visitor).visitDdl_command(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ddl_commandContext ddl_command() throws RecognitionException {
		Ddl_commandContext _localctx = new Ddl_commandContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ddl_command);
		try {
			setState(146);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(142);
				create_virtual_table_command();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(143);
				show_tables_command();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(144);
				show_table_command();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(145);
				drop_table_command();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dml_commandContext extends ParserRuleContext {
		public Select_commandContext select_command() {
			return getRuleContext(Select_commandContext.class,0);
		}
		public Upsert_values_commandContext upsert_values_command() {
			return getRuleContext(Upsert_values_commandContext.class,0);
		}
		public Delete_commandContext delete_command() {
			return getRuleContext(Delete_commandContext.class,0);
		}
		public Dml_commandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dml_command; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HydraQLParserVisitor ) return ((HydraQLParserVisitor<? extends T>)visitor).visitDml_command(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dml_commandContext dml_command() throws RecognitionException {
		Dml_commandContext _localctx = new Dml_commandContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dml_command);
		try {
			setState(151);
			switch (_input.LA(1)) {
			case SELECT:
				enterOuterAlt(_localctx, 1);
				{
				setState(148);
				select_command();
				}
				break;
			case UPSERT:
				enterOuterAlt(_localctx, 2);
				{
				setState(149);
				upsert_values_command();
				}
				break;
			case DELETE:
				enterOuterAlt(_localctx, 3);
				{
				setState(150);
				delete_command();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Create_virtual_table_commandContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(HydraQLParser.CREATE, 0); }
		public TerminalNode VIRTUAL() { return getToken(HydraQLParser.VIRTUAL, 0); }
		public TerminalNode TABLE() { return getToken(HydraQLParser.TABLE, 0); }
		public Table_refContext table_ref() {
			return getRuleContext(Table_refContext.class,0);
		}
		public Column_def_listContext column_def_list() {
			return getRuleContext(Column_def_listContext.class,0);
		}
		public If_not_existsContext if_not_exists() {
			return getRuleContext(If_not_existsContext.class,0);
		}
		public Table_optionsContext table_options() {
			return getRuleContext(Table_optionsContext.class,0);
		}
		public Create_virtual_table_commandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_virtual_table_command; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HydraQLParserVisitor ) return ((HydraQLParserVisitor<? extends T>)visitor).visitCreate_virtual_table_command(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Create_virtual_table_commandContext create_virtual_table_command() throws RecognitionException {
		Create_virtual_table_commandContext _localctx = new Create_virtual_table_commandContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_create_virtual_table_command);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(CREATE);
			setState(154);
			match(VIRTUAL);
			setState(155);
			match(TABLE);
			setState(157);
			_la = _input.LA(1);
			if (_la==IF) {
				{
				setState(156);
				if_not_exists();
				}
			}

			setState(159);
			table_ref();
			setState(160);
			match(LP);
			setState(161);
			column_def_list();
			setState(162);
			match(RP);
			setState(164);
			_la = _input.LA(1);
			if (_la==WITH) {
				{
				setState(163);
				table_options();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Table_optionsContext extends ParserRuleContext {
		public TerminalNode WITH() { return getToken(HydraQLParser.WITH, 0); }
		public TerminalNode PROPERTIES() { return getToken(HydraQLParser.PROPERTIES, 0); }
		public TerminalNode LP() { return getToken(HydraQLParser.LP, 0); }
		public Options_Context options_() {
			return getRuleContext(Options_Context.class,0);
		}
		public TerminalNode RP() { return getToken(HydraQLParser.RP, 0); }
		public Table_optionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table_options; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HydraQLParserVisitor ) return ((HydraQLParserVisitor<? extends T>)visitor).visitTable_options(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Table_optionsContext table_options() throws RecognitionException {
		Table_optionsContext _localctx = new Table_optionsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_table_options);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(WITH);
			setState(167);
			match(PROPERTIES);
			setState(168);
			match(LP);
			setState(169);
			options_();
			setState(170);
			match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Options_Context extends ParserRuleContext {
		public List<OptionContext> option() {
			return getRuleContexts(OptionContext.class);
		}
		public OptionContext option(int i) {
			return getRuleContext(OptionContext.class,i);
		}
		public Options_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_options_; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HydraQLParserVisitor ) return ((HydraQLParserVisitor<? extends T>)visitor).visitOptions_(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Options_Context options_() throws RecognitionException {
		Options_Context _localctx = new Options_Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_options_);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			option();
			setState(177);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(173);
				match(COMMA);
				setState(174);
				option();
				}
				}
				setState(179);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptionContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public OptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_option; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HydraQLParserVisitor ) return ((HydraQLParserVisitor<? extends T>)visitor).visitOption(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptionContext option() throws RecognitionException {
		OptionContext _localctx = new OptionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_option);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			name();
			setState(181);
			match(EQ);
			setState(182);
			literal();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Drop_table_commandContext extends ParserRuleContext {
		public TerminalNode DROP() { return getToken(HydraQLParser.DROP, 0); }
		public TerminalNode VIRTUAL() { return getToken(HydraQLParser.VIRTUAL, 0); }
		public TerminalNode TABLE() { return getToken(HydraQLParser.TABLE, 0); }
		public Table_refContext table_ref() {
			return getRuleContext(Table_refContext.class,0);
		}
		public If_existsContext if_exists() {
			return getRuleContext(If_existsContext.class,0);
		}
		public Drop_table_commandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_drop_table_command; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HydraQLParserVisitor ) return ((HydraQLParserVisitor<? extends T>)visitor).visitDrop_table_command(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Drop_table_commandContext drop_table_command() throws RecognitionException {
		Drop_table_commandContext _localctx = new Drop_table_commandContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_drop_table_command);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			match(DROP);
			setState(185);
			match(VIRTUAL);
			setState(186);
			match(TABLE);
			setState(188);
			_la = _input.LA(1);
			if (_la==IF) {
				{
				setState(187);
				if_exists();
				}
			}

			setState(190);
			table_ref();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Show_tables_commandContext extends ParserRuleContext {
		public TerminalNode SHOW() { return getToken(HydraQLParser.SHOW, 0); }
		public TerminalNode VIRTUAL() { return getToken(HydraQLParser.VIRTUAL, 0); }
		public TerminalNode TABLES() { return getToken(HydraQLParser.TABLES, 0); }
		public Show_tables_commandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_show_tables_command; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HydraQLParserVisitor ) return ((HydraQLParserVisitor<? extends T>)visitor).visitShow_tables_command(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Show_tables_commandContext show_tables_command() throws RecognitionException {
		Show_tables_commandContext _localctx = new Show_tables_commandContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_show_tables_command);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			match(SHOW);
			setState(193);
			match(VIRTUAL);
			setState(194);
			match(TABLES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
